# contracts-reminder

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.json  test.py
config/: env.example
scripts/: generate_templates.py
src/contract_bot/: cli.py  config.py  logging_setup.py  main.py
src/contract_bot/bot/: __init__.py  handlers.py
src/contract_bot/contracts/: documents.py  parser.py
src/contract_bot/integrations/: yadisk.py
src/contract_bot/service/: reminder.py  scheduler.py  sheet_sync.py
src/contract_bot/utils/: text.py
tech-spec/: cols.txt  contracts_calculator.xls  sheets.txt  Контроль окончания сроков действия контрактов.xls  Техническое задание.docx  Уведомление о непродлении контракта.doc  Уведомление работнику о продлении трудового договора (контракта).doc
templates/: notify_extension.docx  notify_termination.docx
